2001-05-29  Derek Price  <dprice@collab.net>

	* Makefile.am (cvs_SOURCES): Add root.h.

	* Makefile.in: Regenerated.
	* stamp-h2.in: Regenerated.

2001-05-29  Derek Price  <dprice@collab.net>

	* checkout.c (safe_location): Correct formatting.

2001-05-29  Derek Price  <dprice@collab.net>

	* root.c (parse_cvsroot): Fix a comment.

2001-05-26  Larry Jones  <larry.jones@sdrc.com>

	* checkout.c (safe_location): Use old-style definition to keep
	non-ANSI compilers happy.

	* sanity.sh (check_respository): Use ${CVSROOT_DIRNAME} instead
	of /tmp/cvs-sanity/cvsroot.

2001-05-25  Larry Jones  <larry.jones@sdrc.com>

	* sanity.sh (modules5): Add sleep to script to help avoid out of
	order messages.

	* filesubr.c (mkdir_if_needed): Return 1 if the directory exists
	reguardless of what errno is set to.
	(Reported by "Robinson, Greg" <greg.robinson@dsto.defence.gov.au>.)

2001-05-25  Derek Price  <dprice@collab.net>
	for Donald Sharp  <sharpd@cisco.com>

	* checkout.c:  Modified safe_location() to refuse checkout if
	the -d option to co specifies inside of the repository.
	* import.c:  New parameter to safe_location needed to be added.
	* cvs.h:  New parameter to safe_location needed to be added.
	* sanity.sh:  Test case to test for failure mode.

2001-05-23  Larry Jones  <larry.jones@sdrc.com>

	* checkout.c (checkout_proc): Don't build top_level_admin directory
	when exporting.
	(Reported by Tony Byrne <tonyb@directski.com>.)

2001-05-21  Derek Price  <dprice@collab.net>

	* client.c: Fix a mispelling in a comment.
	(Patch from Alexey Mahotkin <alexm@hsys.msk.ru>).

2001-05-05  Larry Jones  <larry.jones@sdrc.com>

	* login.c (password_entry_operation): Only warn if unable to open
	.cvspass for reading: may be initial login and it doesn't exist yet.

2001-05-15  Derek Price  <dprice@collab.net>

	* client.c (start_tcp_server): Use the struct sockaddr_in declared in
	the function.
	(Reported by Emil Isberg <isberg@dynarc.se>.)
